Continue work on header

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="#">Sign in</a>
         </li>
         <li class="nav-list-item">
-            <img id="menu" src="images/hamburger.png">
+            <img id="hamburger" src="images/hamburger.png">
         </li>
         </ul>
       </nav>
